fix: lint validation
