# handlers/inventoryHandlers.go
@@ -14,7 +14,7 @@ import (
 // @Accept json
 // @Produce json
 // @Param input body types.CreateItemRequest true "Item info"
-// @Success 200 {object} types.CreateItemResponse
+// @Success 200 {object} types.InventoryItem
 // @Failure 400 {object} types.ErrorResponse
 // @Failure 500 {object} types.ErrorResponse
 // @Router /inventory [post]
@@ -40,7 +40,7 @@ func (h *InventoryHandler) CreateItem(c *gin.Context) {
 // @Tags Inventory
 // @Produce json
 // @Param id path string true "Item ID"
-// @Success 200 {object} types.GetItemResponse
+// @Success 200 {object} types.InventoryItem
 // @Failure 404 {object} types.ErrorResponse
 // @Router /inventory/{id} [get]
 func (h *InventoryHandler) GetItem(c *gin.Context) {
@@ -60,7 +60,7 @@ func (h *InventoryHandler) GetItem(c *gin.Context) {
 // @Tags Inventory
 // @Produce json
 // @Param id path string true "Item ID"
-// @Success 200 {object} types.GetItemResponse
+// @Success 200 {object} []types.InventoryItem
 // @Failure 404 {object} types.ErrorResponse
 // @Router /inventory/ [get]
 func (h *InventoryHandler) GetItems(c *gin.Context) {
@@ -78,7 +78,7 @@ func (h *InventoryHandler) GetItems(c *gin.Context) {
 // @Tags Inventory
 // @Produce json
 // @Param type path string true "Item type (resource, equipment)"
-// @Success 200 {object} types.ListItemsResponse
+// @Success 200 {object} []types.InventoryItem
 // @Failure 400 {object} types.ErrorResponse
 // @Router /inventory/type/{type} [get]
 func (h *InventoryHandler) ListItemsByType(c *gin.Context) {
@@ -99,7 +99,7 @@ func (h *InventoryHandler) ListItemsByType(c *gin.Context) {
 // @Tags Inventory
 // @Produce json
 // @Param status path string true "Status (high, low, danger, out_of_stock)"
-// @Success 200 {object} types.ListItemsResponse
+// @Success 200 {object} []types.InventoryItem
 // @Failure 400 {object} types.ErrorResponse
 // @Router /inventory/status/{status} [get]
 func (h *InventoryHandler) ListItemsByStatus(c *gin.Context) {
@@ -120,7 +120,7 @@ func (h *InventoryHandler) ListItemsByStatus(c *gin.Context) {
 // @Tags Inventory
 // @Produce json
 // @Param category path string true "Category (general, electronics, furniture, etc)"
-// @Success 200 {object} types.ListItemsResponse
+// @Success 200 {object} []types.InventoryItem
 // @Failure 400 {object} types.ErrorResponse
 // @Router /inventory/category/{category} [get]
 func (h *InventoryHandler) ListItemsByCategory(c *gin.Context) {
@@ -142,7 +142,7 @@ func (h *InventoryHandler) ListItemsByCategory(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param input body types.UpdateItemRequest true "Updated item info"
-// @Success 200 {object} types.UpdateItemResponse
+// @Success 200 {object} types.InventoryItem
 // @Failure 400 {object} types.ErrorResponse
 // @Failure 500 {object} types.ErrorResponse
 // @Router /inventory/ [put]
@@ -169,7 +169,7 @@ func (h *InventoryHandler) UpdateItem(c *gin.Context) {
 // @Tags Inventory
 // @Produce json
 // @Param id path string true "Item ID"
-// @Success 200 {object} types.DeleteItemResponse
+// @Success 200 {object} []types.InventoryItem
 // @Failure 500 {object} types.ErrorResponse
 // @Router /inventory/{id} [delete]
 func (h *InventoryHandler) DeleteItem(c *gin.Context) {
